--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# .gitignore
+# 
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
