--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
 "Suriyaa Kudo <isc.suriyaa@gmail.com> (http://suriyaakudo.bplaced.net)",
 "iSC Host"
 ],
-"description": "The official website of "The Jack's Dogs Family"",
+"description": "The official website of 'The Jack's Dogs Family'",
 "main": "index.html",
 "license": "Apache v2",
 "dependencies": {
