--- a/package.json
+++ b/package.json
@@ -17,9 +17,5 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "private": true,
-  "scripts": {
-    "test": "grunt test",
-    "update": "bin/update.sh"
-  }
+  "private": true
 }
