--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^1.1.2",
     "load-config": "^1.0.0"
   }
 }
