--- a/bin/package.json
+++ b/bin/package.json
@@ -1,11 +1,8 @@
 {
   "name": "jdsf.isc",
-  "version": "1.0.0",
+  "version": "1.1-alpha",
   "description": "The official website of \"The Jack's Dogs Family\".",
   "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iSC-Host/jdsf.isc.git"
