--- a/_data/bower.json
+++ b/_data/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "jdsf.isc",
-  "version": "1.0",
+  "version": "1.1-alpha",
   "homepage": "http://isc-host.github.io/jdsf.isc",
   "authors": [
     "iSC Group",
-    "Suriyaa Kudo <isc.suriyaa@gmail.com>",
+    "Suriyaa Kudo",
     "iSC Host"
   ],
   "description": "The official website of 'The Jack's Dogs Family'.",
